--- a/admin.html
+++ b/admin.html
@@ -43,7 +43,7 @@
     <button type="button" class="btn btn-primary" onclick="submitted();">Submit</button>
     </center>
 
-    <button type="button" class="btn btn-light" onclick="copy();" id="cp-btn" style="float:right">Copylink</button>
+    <button type="button" class="btn btn-light" onclick="copylink();" id="cp-btn" style="float:right">Copylink</button>
     <div class="form-group">
       <input type="text" class="form-control" id="outputlink">
     </div>
