--- a/sample/1.html
+++ b/sample/1.html
@@ -20,7 +20,7 @@
     </button>
 	  <h1>CodeBase</h1>
   </nav>
-  <div class="collapse" id="navbarToggleExternalContent">
+  <div class="collapse bg-secondary" id="navbarToggleExternalContent">
     <div id="links-res"></div>
   </div>
 </div>
