--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/style.css" >
+    <link rel="stylesheet" href="css/style.css" >
 
     <title>Admin Panel</title>
   </head>
@@ -43,12 +43,12 @@
     <button type="button" class="btn btn-primary" onclick="submitted();">Submit</button>
     </center>
 
-    <button type="button" class="btn btn-light" onclick="copylink();" id="cp-btn" style="float:right">Copylink</button>
+    <button type="button" class="btn btn-light" onclick="copylink();" id="cp-btn1" style="float:right">Copylink</button>
     <div class="form-group">
       <input type="text" class="form-control" id="outputlink">
     </div>
 
-    <button type="button" class="btn btn-light" onclick="copy();" id="cp-btn" style="float:right">Copy</button>
+    <button type="button" class="btn btn-light" onclick="copy();" id="cp-btn2" style="float:right">Copy</button>
     <div class="form-group">
       <textarea class="form-control" id="output" rows="3"></textarea>
     </div>
@@ -58,7 +58,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="static/js/admin.js"></script>
+    <script src="setting/admin.js"></script>
   </body>
 </html>
 
