--- a/sample/1.html
+++ b/sample/1.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.0/build/styles/monokai.min.css">
 
-    <title>Hello, world!</title>
+    <title id="title">Hello, world!</title>
   </head>
   <body>
 <div class="pos-f-t">
@@ -26,6 +26,12 @@
   </div>
 </div>
 <div class="row nt-row">
+  <div class="alert alert-warning alert-dismissible fade show" id="dismissible" role="alert">
+  Click on Menu to get all topics related to this Subject. 
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">×</span>
+  </button>
+</div>
   <div class="sidebar col-lg-2 col-md-3">
     <h2>CodeBase</h2><hr>
     <div id="links"></div>
