--- a/Java-manual-2020.html
+++ b/Java-manual-2020.html
@@ -7,10 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://shaikhmudassir.github.io/codebase/static/style.css" >
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.0/build/styles/monokai.min.css">
-
-    <title>CodeBase - Home</title>
+    <link rel="stylesheet" href="https://shaikhmudassir.github.io/codebase/css/style.css" >
+    <title id="title"></title>
   </head>
   <body>
 <div class="pos-f-t">
@@ -18,37 +16,32 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-	<h1>CodeBase</h1>
-	
+	  <h1>CodeBase</h1>
   </nav>
+  <div class="collapse bg-secondary" id="navbarToggleExternalContent">
+    <div id="links-res"></div>
   </div>
 </div>
-<div id="me-main">
+<div class="row nt-row">
+  <div class="sidebar col-lg-2 col-md-3">
+    <h2>CodeBase</h2><hr>
+    <div id="links"></div>
+  </div>
 
-</div>
+  <div class="main col-lg-10 col-md-9">
+    <h1 id="page-title"></h1><hr>
+    <ul id="flask-inner-link">
+      <!-- Link to individual post-->
+    </ul><hr>
+    <div id="flask-post"><!-- All posts are here --> </div>  
+
     <!-- Optional JavaScript -->
-
-    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.0/build/highlight.min.js"></script>  </head>
-    <script>hljs.initHighlightingOnLoad();</script>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://shaikhmudassir.github.io/codebase/static/jinja.js"></script>
-    <script>subject()</script>
+    <script src="C:\Python37\Projects\codebaseF\jinja.js"></script>
+    <script>topic()</script> 
+
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
