--- a/Java-manual-2020.html
+++ b/Java-manual-2020.html
@@ -4,10 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" href="img/icon.png" type="image/png" sizes="16x16">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://shaikhmudassir.github.io/codebase/css/style.css" >
+    <link rel="stylesheet" href="https://mudazzir.gitlab.io/codebase/static/style.css" >
     <title id="title"></title>
   </head>
   <body>
@@ -23,10 +23,18 @@
   </div>
 </div>
 <div class="row nt-row">
+  <div class="alert alert-warning alert-dismissible fade show" id="dismissible" role="alert">
+    Click on Menu to get all topics related to this Subject. 
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+  </div>
   <div class="sidebar col-lg-2 col-md-3">
     <h2>CodeBase</h2><hr>
+    
     <div id="links"></div>
   </div>
+
+  <!--Goto top Button-->
+  <button onclick="topFunction()" id="goTop" title="Go to top">Top</button>
 
   <div class="main col-lg-10 col-md-9">
     <h1 id="page-title"></h1><hr>
@@ -40,7 +48,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="C:\Python37\Projects\codebaseF\jinja.js"></script>
+    <script src="https://mudazzir.gitlab.io/codebase/static/jinja.js"></script>
     <script>topic()</script> 
 
   </body>
